# fast_zero

./: pyproject.toml
fast_zero/: app.py  models.py
migrations/: env.py
migrations/versions/: 14fb7ec610b5_create_users_table.py  a460c3b77b54_incluindo_updated_at.py
tests/: conftest.py  test_api.py  test_db.py
